log
Wed 15 May 2024 09:18:15 PM UTC: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 41 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:108:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  108 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
fd3347b
Wed 15 May 2024 09:19:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8a9b854
Wed 15 May 2024 09:59:03 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:97:24: error: ‘col’ undeclared (first use in this function)
   97 |       if (n->sudo[fil][col] == 0){
      |                        ^~~
sudoku.c:97:24: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:102:11: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
  102 |    return list;
      |           ^~~~
      |           List
sudoku.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
98c132c
